objects/EA_Geography_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>Select Country Code</description>
        <inlineHelpText>Select Country Code</inlineHelpText>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Enter Country Name</description>
        <inlineHelpText>Enter Country Name</inlineHelpText>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level1__c</fullName>
        <description>Enter Region Name</description>
        <inlineHelpText>Enter Region Name</inlineHelpText>
        <label>Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level2__c</fullName>
        <description>Enter Zone Name</description>
        <inlineHelpText>Enter Zone Name</inlineHelpText>
        <label>Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level3__c</fullName>
        <description>Enter Sub-Zone/Cluster Name</description>
        <inlineHelpText>Enter Sub-Zone/Cluster name</inlineHelpText>
        <label>Level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Select the Business for which you&apos;re creating/editing the record; SLS represents Sales; BFS represents Field Services</description>
        <inlineHelpText>Select the Business for which you&apos;re creating/editing the record; SLS represents Sales; BFS represents Field Services</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SLS</fullName>
                </value>
                <value>
                    <fullName>BFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EA Geography Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Country__c</columns>
        <columns>CountryCode__c</columns>
        <columns>Level1__c</columns>
        <columns>Level2__c</columns>
        <columns>Level3__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GM-{0000}</displayFormat>
        <label>EA Geography Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EA Geography Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>